--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -35,32 +35,32 @@ header {
 }
 
 .language-switcher {
-  display: none;
+  /* display: none; */
   align-items: center;
   font-size: 16px;
 }
 
 .language-switcher img {
-  height: 20px;
-  margin-right: 8px;
+  height: 22px;
+  margin-right: 12px;
 }
 
 .hero {
   position: relative;
   text-align: center;
-  height: 625px;
+  height: 375px;
 }
 
 .hero-image {
   width: 100%;
-  height: 625px;
+  height: 375px;
   object-fit: cover;
   opacity: 0.7; /* Ajuste l'opacité de l'image elle-même, tout en gardant le texte opaque */
 }
 
 .hero-text {
   position: absolute;
-  top: 82%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -82,34 +82,34 @@ header {
 .scenarios {
   display: flex;
   background-color: #000;
-  width: 100%;
+  width: 80%;
   justify-content: center;
-  gap: 45px;
-  padding-top: 40px;
-  padding-bottom: 50px; /* Ajoute un espacement en bas pour équilibrer le design */
+  gap: 10px;
+  padding-top: 0px;
+  padding-bottom: 10px; /* Ajoute un espacement en bas pour équilibrer le design */
 }
 
 .scenario {
   background-color: #fff;
   border-radius: 20px;
   text-align: center;
-  width: 300px;
+  width: 30%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   height: auto;
 }
 
 .scenario h2 {
-  font-size: 1.2em;
+  font-size: 1.0em;
   color: #000;
   margin-bottom: 15px;
-  font-weight: 600;
+  font-weight: 150;
 }
 
 .scenario p {
   font-family: "Helvetica Now Display", Arial, sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   color: #000;
   margin: 0;
   line-height: 1.5;
-  padding: 5px 20px 20px 20px;
+  padding: 10px 20px 20px 20px;
 }
