--- a/assets/styles/stylesScenario.css
+++ b/assets/styles/stylesScenario.css
@@ -13,12 +13,67 @@ body {
   color: white;
 }
 
-header {
+#api-frame {
+  display: block;
+  position: absolute;
+  /* left: 0px; */
+  left: 1%;
+  /* width:calc(100%-1px); */
+  width: 98%;
+  /* padding: 10px; */
+  /* top: 0px; */
+  height: 98%;
+  border: 0;
+}
+
+.container{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background-color: #000;
+  flex-wrap: wrap;
+}
+#cacheHaut {
+  position: absolute;
+  height: 43px;
+  width: 210px;
+  background: #2D2D2D;
+  border-radius: 21px;
+}
+.col1{
+  width:40px;
+}
+.col2{
+  width:5px;
+}
+.col3{
+  width:155px;
+  padding-top: 3px;
+}
+ 
+.slidecontainer {
+  width: 10%; /* Width of the outside container */
+  
+}
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 30px; /* Specified height */
+  padding: 2px;
+  
+  background: #00A1E0; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 1; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+  border-radius: 30px;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 30px; /* Set a specific slider handle width */
+  height: 30px; /* Slider handle height */
+  background: white; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+  border-radius: 30px;
 }
 
 a {
@@ -27,16 +82,6 @@ a {
 
 .logo img {
   height: 40px;
-}
-
-.mission-bar {
-  background-color: #007eb5;
-  height: 75px;
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 40px;
 }
 
 .mission-title {
@@ -80,22 +125,6 @@ a {
   height: 40px;
 }
 
-.timer {
-  font-size: 16px;
-  color: white;
-}
-
-.language {
-  display: none;
-  align-items: center;
-  font-size: 16px;
-}
-
-.language img {
-  height: 20px;
-  margin-right: 8px;
-}
-
 main {
   display: flex;
   padding: 20px;
@@ -107,7 +136,7 @@ main {
   padding: 20px;
   background-color: #f0f0f0;
   color: black;
-  width: 400px;
+  width: 180px;
   height: 760px;
 }
 
@@ -128,7 +157,6 @@ ul > li {
 }
 
 ul > li::before {
-  content: "•"; /* Ajouter la puce personnalisée */
   color: #007eb5; /* Couleur de la puce */
   font-size: 20px; /* Taille de la puce */
   margin-right: 10px; /* Espacement entre la puce et le texte */
@@ -136,7 +164,7 @@ ul > li::before {
 }
 
 ul ul {
-  margin-left: 30px; /* Indentation pour les sous-listes */
+  margin-left: 0px; /* Indentation pour les sous-listes */
 }
 
 ul ul > li {
@@ -144,7 +172,7 @@ ul ul > li {
   align-items: flex-start; /* Aligner l'icône chevron avec le texte */
   position: relative;
   margin-bottom: 10px; /* Ajout d'un espacement entre les éléments de la sous-liste */
-  margin-left: 30px;
+  margin-left: 0px;
   font-size: 15px;
 }
 
@@ -152,7 +180,7 @@ ul ul > li::before {
   content: "›"; /* Chevron pour les sous-points */
   color: #333; /* Couleur du chevron */
   font-size: 20px; /* Taille du chevron */
-  margin-right: 10px; /* Espacement entre le chevron et le texte */
+  margin-right: 5px; /* Espacement entre le chevron et le texte */
   line-height: 1; /* Ajuster la hauteur de ligne de la puce */
   margin-top: 3px; /* Ajuster la position verticale du chevron */
 }
@@ -189,18 +217,6 @@ ul ul li span.material-symbols-outlined {
 
 .content-placeholder div {
   width: 100%;
-}
-
-#api-frame {
-  display: block;
-  /* left: 0px; */
-  left: 20%;
-  /* width:calc(100%-1px); */
-  width: 100%;
-  /* padding: 10px; */
-  top: 0px;
-  height: 800px;
-  border: 0;
 }
 
 .popup {
@@ -280,30 +296,3 @@ ul ul li span.material-symbols-outlined {
   width: 100px;
 }
 
-.green-banner {
-  background-color: #4ecb71; /* Green color for correct answer */
-}
-
-.slidecontainer {
-  width: 10%; /* Width of the outside container */
-}
-.slider {
-  -webkit-appearance: none;  /* Override default CSS styles */
-  appearance: none;
-  width: 10%; /* Full-width */
-  height: 5px; /* Specified height */
-  background: black; /* Grey background */
-  outline: none; /* Remove outline */
-  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-  transition: opacity .2s;
-}
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
-  appearance: none;
-  width: 30px; /* Set a specific slider handle width */
-  height: 30px; /* Slider handle height */
-  background: black; /* Green background */
-  cursor: pointer; /* Cursor on hover */
-  border-radius: 15px;
-}
